@@ -1,5 +1,6 @@
-- 2016-11-20 : ajout de quelques commandes PTZ (en attendant une refonte)
-- 2016-10-16 : ajout de l'affichage avancé
+- 2017-05 : ajout du fichier plugin info en json
+- 2016-11 : ajout de quelques commandes PTZ (en attendant une refonte)
+- 2016-10 : ajout de l'affichage avancé
 - 2.7 : correction des dépendances pour Debian Wheezy
 - 2.6 : correction de la compatibilité avec mot de passe complexe (caractères spéciaux). Automatisation de l’installation des dépendances
 - 2.5 : ajout activation ou désactivation détection de mouvement
